# QTestLibPlugin

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.internal  QTestLibPlugin.json  QTestLibPlugin.json.in  QTestLibPlugin.local.pri.example  QTestLibPlugin.pri  QTestLibPlugin.pro  QTestLibPlugin_dependencies.pri  QtCreator.local.pri.example  README.md  gcov.pri  lightxmlqtestlibparser.cpp  lightxmlqtestlibparser.h  lightxmlqtestlibparserfactory.cpp  lightxmlqtestlibparserfactory.h  make.pri  plaintextqtestlibparser.cpp  plaintextqtestlibparser.h  plaintextqtestlibparserfactory.cpp  plaintextqtestlibparserfactory.h  qtestlibargsparser.cpp  qtestlibargsparser.h  qtestlibmodel.cpp  qtestlibmodel.h  qtestlibmodeltest.dtd  qtestliboutput.dtd  qtestlibplugin.cpp  qtestlibplugin.h  qtestlibplugin.pro  qtestlibplugin.qrc  qtestlibplugin_en.ts  qtestlibplugin_fr.ts  qtestlibplugin_global.h  qtestlibpluginconstants.h  testmodelfactory.cpp  testmodelfactory.h  testoutputpane.cpp  testoutputpane.h  (+11 more)
ideas/: proxyUpdate.patch
patches/: run_control_signal-4.4.0.patch  run_control_signal-4.5.0.patch
plugin/QTestLibPlugin/: CMakeLists.txt  QTestLibPlugin.json.in  QTestLibPlugin.pro  QTestLibPlugin_dependencies.pri  qtestlibplugin.cpp  qtestlibplugin.h  qtestlibplugin.qrc
src/QTestLibPlugin/: CMakeLists.txt  QTestLibPlugin.json.in  QTestLibPlugin.pro  QTestLibPlugin_dependencies.pri  baseforceparserfactory.cpp  baseforceparserfactory.h  baseqmakeqtestlibparserfactory.cpp  baseqmakeqtestlibparserfactory.h  basexmlqtestlibparser.cpp  basexmlqtestlibparser.h  lightxmlqtestlibparser.cpp  lightxmlqtestlibparser.h  lightxmlqtestlibparserfactory.cpp  lightxmlqtestlibparserfactory.h  pathaspect.cpp  pathaspect.h  plaintextqtestlibparser.cpp  plaintextqtestlibparser.h  plaintextqtestlibparserfactory.cpp  plaintextqtestlibparserfactory.h  qmaketestextraaspectfactory.cpp  qmaketestextraaspectfactory.h  qmaketestrunconfigurationfactory.cpp  qmaketestrunconfigurationfactory.h  qtestlibargsparser.cpp  qtestlibargsparser.h  qtestlibmodel.cpp  qtestlibmodel.h  qtestlibplugin.cpp  qtestlibplugin.h  qtestlibplugin_en.ts  qtestlibplugin_global.h  qtestlibpluginconstants.h  testextraaspect.cpp  testextraaspect.h  testmodelfactory.cpp  testmodelfactory.h  testoutputpane.cpp  testoutputpane.h  testproxymodel.cpp  (+17 more)
src/QTestLibPlugin/Test/: Test.pro  forcelightxmlqtestlibparserfactorytest.cpp  forcelightxmlqtestlibparserfactorytest.h  forceplaintextqtestlibparserfactorytest.cpp  forceplaintextqtestlibparserfactorytest.h  forcexmlqtestlibparserfactorytest.cpp  forcexmlqtestlibparserfactorytest.h  forcexunitxmlqtestlibparserfactorytest.cpp  forcexunitxmlqtestlibparserfactorytest.h  lightxmlqtestlibparserfactorytest.cpp  lightxmlqtestlibparserfactorytest.h  lightxmlqtestlibparsertest.cpp  lightxmlqtestlibparsertest.h  plaintextqtestlibparserfactorytest.cpp  plaintextqtestlibparserfactorytest.h  plaintextqtestlibparsertest.cpp  plaintextqtestlibparsertest.h  qmakelightxmlqtestlibparserfactorytest.cpp  qmakelightxmlqtestlibparserfactorytest.h  qmakemakechecktest.cpp  qmakemakechecktest.h  qmakeplaintextqtestlibparserfactorytest.cpp  qmakeplaintextqtestlibparserfactorytest.h  qmakexmlqtestlibparserfactorytest.cpp  qmakexmlqtestlibparserfactorytest.h  qmakexunitxmlqtestlibparserfactorytest.cpp  qmakexunitxmlqtestlibparserfactorytest.h  testactionstest.cpp  testactionstest.h  testhelper.cpp  testhelper.h  testmodelfactorytest.cpp  testmodelfactorytest.h  testrunconfigurationfactorytest.cpp  testrunconfigurationfactorytest.h  testsuitemodeltest.cpp  testsuitemodeltest.h  xmlqtestlibparserfactorytest.cpp  xmlqtestlibparserfactorytest.h  xmlqtestlibparsertest.cpp  (+5 more)
src/QTestLibPlugin/Utils/: filetypevalidatinglineedit.cpp  filetypevalidatinglineedit.h
src/QTestLibPlugin/Widgets/: filetypevalidatinglineedit.cpp  filetypevalidatinglineedit.h
tests/: qttestsubfunction.h  tests.pro
tests/AllMessagesTest/: AllMessagesTest.pro  allmessagestest.cpp  allmessagestest.xml
tests/LightXMLQTestLibParserTest/: CMakeLists.txt  LightXMLQTestLibParserTest.pro  lightxmlqtestlibparserfactoryfake.cpp  lightxmlqtestlibparserfactoryfake.h  lightxmlqtestlibparsertest.cpp
tests/LimitsTest/: LimitsTest.pro  limitstest.cpp  limitstest.xml
tests/MakefileSpaceTest/: MakefileSpaceTest.pro  makefilespacetest.xml
tests/MakefileTest/: MakefileTest.pro
tests/MultipleClassesTest/: MultipleClassesTest.pro  multipleclassestest.cpp  multipleclassestest.xml
tests/NoSubTestOne/: NoSubTestOne.pro
tests/NoSubTestTwo/: NoSubTestTwo.pro
tests/OneClassTest/: OneClassTest.pro  oneclasstest.cpp  oneclasstest.xml
tests/OneFailTest/: OneFailTest.pro  onefailtest.cpp
tests/OnePassTest/: OnePassTest.pro  (+1 more)
tests/PlainTextQTestLibParserTest/: CMakeLists.txt  PlainTextQTestLibParserTest.pro  plaintextqtestlibparserfactoryfake.cpp  plaintextqtestlibparserfactoryfake.h  plaintextqtestlibparsertest.cpp  qtestliboutput.dtd
tests/QTestLibArgsParserTest/: CMakeLists.txt  QTestLibArgsParserTest.pro  qtestlibargsparsertest.cpp
tests/QTestLibModelTest/: .gitignore  CMakeLists.txt  QTestLibModelTest.pro  gentest.sh  qtestlibmodeltest.cpp  testlist.sh
tests/TestProxyModelTest/: CMakeLists.txt  TestProxyModelTest.pro  plaintextqtestlibparserfactoryfake.cpp  plaintextqtestlibparserfactoryfake.h  testproxymodeltest.cpp  xmlqtestlibparserfactoryfake.cpp  xmlqtestlibparserfactoryfake.h
tests/TestSuiteModelSignalTest/: CMakeLists.txt  TestSuiteModelSignalTest.pro  testsuitemodelsignaltest.cpp
tests/XMLQTestLibParserTest/: CMakeLists.txt  XMLQTestLibParserTest.pro  xmlqtestlibparserfactoryfake.cpp  xmlqtestlibparserfactoryfake.h  xmlqtestlibparsertest.cpp
tests/XUnitXMLQTestLibParserTest/: CMakeLists.txt  XUnitXMLQTestLibParserTest.pro  xunitxmlqtestlibparserfactoryfake.cpp  xunitxmlqtestlibparserfactoryfake.h  xunitxmlqtestlibparsertest.cpp
tests/common/: CMakeLists.txt  common.pro  qtestlibmodeltester.cpp  qtestlibmodeltester.h  qttestsubfunction.h  qtversion.cpp  qtversion.h
translations/: qtestlibplugin_en.ts  qtestlibplugin_fr.ts  translations.pro
(+58 files in other folders)
